# web_test

./: Cargo.toml  build_web.sh
docs/: index.html  sw.js  web_test.js  web_test_bg.wasm
src/: app.rs  lib.rs  main.rs
