[package]
name = "web_test"
default-run = "web_test_bin"
version = "0.1.0"
authors = ["Gabriel Lee <g.lee13770334@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "web_test_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]
